bad/assign_arr_elem_array_bool.example_compiler_output
ERROR
[1mbad/assign_arr_elem_array_bool.lat:4:20: [1;31merror: [0;1massigning to `int[]` from incompatible type `boolean`[m
	(new int[][3])[1] = true;
	                  [1;32m^[m
